--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.4",
@@ -72,6 +73,7 @@
     "@types/maplibre-gl": "^1.14.0",
     "@types/papaparse": "^5.3.14",
     "@types/react-lottie": "^1.2.10",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^25.0.1",
