--- a/frontend_react/tsconfig.json
+++ b/frontend_react/tsconfig.json
@@ -1,13 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es2015"
-    ],
-    "types": ["@types/jest", "@testing-library/jest-dom", "@types/node",],
+    "lib": ["dom", "dom.iterable", "esnext", "es2015"],
+    "types": ["@types/jest", "@testing-library/jest-dom", "@types/node"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,9 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
