--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -37,6 +37,7 @@
     "serve": "^14.2.4",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.6",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.25.9",
+    "@babel/plugin-proposal-private-property-in-object":"7.21.11",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
