Design new changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "Layerwidget",
         "lightgray",
         "MAPWIDGET",
+        "PANCHAYAT",
+        "sarabun",
         "tailwindcss"
     ]
 }
