--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gather-frontend",
+  "name": "foresight-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.4",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.13.0",
     "redis": "^4.7.0",
     "serve": "^14.2.4",
@@ -68,7 +69,6 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@babel/preset-react": "^7.25.9",
-    "@babel/plugin-proposal-private-property-in-object":"7.21.11",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
